--- a/index.html
+++ b/index.html
@@ -1,7 +1,44 @@
-
-<h1>Oğuzhan Daşkaya</h1>
-<h3>Hakkımda</h3>
-<p>Merhaba. Ben Oğuzhan Daşkaya İstanbul'da yaşıyorum. Savaş ve aksiyon filmleri severim. Mobil geliştirmeyle ilgileniyorum. Kodluyoruz'un bu eğitim serisi sayesinde harika şeyler öğrendim ve öğrenmeye devam ediyorum!</p>
-<h2>Sevdiğim Filmler</h2>
-<h3>Das Boot</h3>
-<p>Das Boot, 1979 yılında çekilerek 1981 yılında vizyona giren, II. Dünya Savaşı'nda U-96 adlı tip 7 sınıfı Alman U-boot mürettebatın konu alan epik savaş filmi. 55. Akademi Ödülleri'nde Das Boot filmi, En İyi Yönetmen dahil olmak üzere altı dalda ödüle aday gösterildi.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <H1>Oğuzhan Daşkaya</H1>
+    <div>
+        <h3>Hakkımda</h3>
+        <p>Maraba. Ben oğuz Tr sunucusunda yaşıyorum. Zamanımın çoğu bilgisayar
+             başında geçiyor. Arada bir gitar çaldığım görülür. İnceleme puanları çok yüksek olan filmleri izlerim. Genellikle oyun oynarım. Bence tüm zamanların en iyi oyunları ve filmleri şunlar. </p>
+    </div>
+    <div>
+        <h4>İlgi Alanlarım</h4>
+        <ol>
+            <li>Oyun <ul>
+                <li>The Last of Us</li>
+                <li>God of War</li>
+                <li>The Witcher 3</li>
+            </ul></li>
+            <li>Film <ul>
+                <li>Batman Kara Şovalye</li>
+                <li>Yüzüklerin Efendisi İkiz Kule</li>
+                <li>Das Boot</li>
+            </ul></li>
+            <li>Kitap <ul>
+                <li>10 Küçük Zenci</li>
+                <li>Köpek Kalbi</li>
+                <li>Kadehteki Göktaşı</li>
+            </ul></li>
+        </ol>
+    </div>
+    <div>
+        <h2>Hall of Fame</h2>
+        <h3>The Last of Us</h3>
+        <div style="text-align: center;"><img src="the-last-of-us-hbo.jpg" alt=""></div>
+    </div>
+    <p>Oyun; tüm dünyayı saran ve bulaşanları birkaç saat içerisinde insanlara saldıran yaratıklara dönüştüren salgın bir hastalığın başlamasından yirmi yıl sonrasını, 2033 yılını konu alır. Hastalık sebebiyle medeniyet büyük ölçüde mahvolmuş ve farklı gruplar hâlinde yaşamak zorunda kalan insanlar, hayatta kalabilmek için birbirleri ve hastalıklılara karşı mücadele etmek zorunda kalmıştır.</p>
+    
+</body>
+</html>
